--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,6 @@ jobs:
     services:
       postgres:
         image: postgres:11.6-alpine
-        env:
-          POSTGRES_PASSWORD: password
         ports:
           - 5432:5432
         # needed because the postgres container does not provide a healthcheck
@@ -36,7 +34,7 @@ jobs:
       run: go build -v .
 
     - name: Create Database
-      run: createdb -h 127.0.0.1 -p 5432 -U root -e gin_sample_test -W password
+      run: createdb -h 127.0.0.1 -p 5432 -U root -e gin_sample_test
 
     - name: Test
       run: go test -v .
@@ -45,5 +43,5 @@ jobs:
         DB_PORT: 5432
         DB_USER: root
         DB_NAME: gin_sample_test
-        DB_PASSWORD: password
+        DB_PASSWORD: ''
         DB_SSLMODE: disable
