--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,4 +43,5 @@ jobs:
         DB_PORT: 5432
         DB_USER: postgres
         DB_NAME: gin_sample_test
+        DB_PASSWORD: ""
         DB_SSLMODE: disable
