--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,6 @@ jobs:
         image: postgres:11.6-alpine
         ports:
           - 5432:5432
-        env:
-          POSTGRES_PASSWORD: password
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
@@ -41,10 +39,4 @@ jobs:
     - name: Test
       run: go test -v .
       env:
-        DB_CONNECT: host=127.0.0.1 port=5432 user=postgres dbname=gin_sample_test password= sslmode=disable
-        DB_HOST: 127.0.0.1
-        DB_PORT: 5432
-        DB_USER: postgres
-        DB_NAME: gin_sample_test
-        DB_PASSWORD: password
-        DB_SSLMODE: disable
+        DB_CONNECT: host=127.0.0.1 port=5432 user=postgres dbname=gin_sample_test sslmode=disable
